syntax = "proto2";
option java_package = "com.github.sioncheng.prtl.outer";
option java_outer_classname = "CreateFileResult";

message CreateFileResultMessage {
    required string path = 1;
    required bool success = 2;
}