syntax = "proto2";
option java_package = "com.github.sioncheng.prtl.outer";
option java_outer_classname = "OpenFile";

message OpenFileMessage {
    required string path = 1;
}