syntax = "proto2";
option java_package = "com.github.sioncheng.prtl.outer";
option java_outer_classname = "OpenFileResult";

message OpenFileResultMessage {
    required string path = 1;
    required bool success = 2;
}